# messsocks

./: .gitattributes  .gitignore  .travis.yml  Pipfile  README.md  README.org  log.py  logging.conf  main.py  messclient.py  messserver.py  msclient.py  pyproject.toml  requirements.txt  sonar-project.properties
conf/: example.conf  logging.conf
messsocks/: config.py  exception.py  log.py  messclient.py  messserver.py  utils.py
messsocks/protocol/: raw.py  socks5.py
protocol/: raw.py
tests/: test_client_server.py  test_config.py  test_connect.py  test_utils.py
