[project]
name = "messsocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid==2.1.0",
    "atomicwrites==1.2.1",
    "attrs==18.2.0",
    "certifi==2018.11.29",
    "chardet==3.0.4",
    "coverage==4.5.2",
    "idna==2.8",
    "isort==4.3.4",
    "lazy-object-proxy==1.3.1",
    "mccabe==0.6.1",
    "more-itertools==5.0.0",
    "pluggy==0.8.1",
    "py==1.7.0",
    "pylint==2.2.2",
    "pysocks==1.6.8 ; extra == 'socks'",
    "pytest==4.1.1",
    "pytest-cov==2.6.1",
    "requests[socks]==2.21.0",
    "six==1.12.0",
    "urllib3==1.24.1",
    "wrapt==1.11.0",
]
